--- a/edstudies.html
+++ b/edstudies.html
@@ -10,7 +10,6 @@
             <li> <a href="edstudies.html">Education Studies</a> </li>
             <li> <a href="artdesign.html">Art and Design</a> </li>
         </ul>
-        <h1>luca guerrera</h1>
-        <p>Computer Science and Education Studies @ Wesleyan University.</p>
+        <h1>this is ed studies</h1>
     </body>
 </html>
