--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <ul class="navbar">
-            <li> <a href="index.html">Home</a> </li>
+            <li> <a href="">Home</a> </li>
             <li> <a href="coding.html">Coding</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
             <li> <a href="artdesign.html">Art and Design</a> </li>
