--- a/coding.html
+++ b/coding.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <ul class="navbar">
-            <li> <a href="">Home</a> </li>
-            <li> <a href="coding.html">Coding</a> </li>
+            <li> <a href="/">Home</a> </li>
+            <li> <a class="active" href="coding.html">Coding</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
             <li> <a href="artdesign.html">Art and Design</a> </li>
         </ul>
