--- a/artdesign.html
+++ b/artdesign.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <ul class="navbar">
-            <li> <a href="">Home</a> </li>
+            <li> <a href="/">Home</a> </li>
             <li> <a href="coding.html">Coding</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
-            <li> <a href="artdesign.html">Art and Design</a> </li>
+            <li> <a class="active" href="artdesign.html">Art and Design</a> </li>
         </ul>
         <h1>this is art</h1>
     </body>
