--- a/artdesign.html
+++ b/artdesign.html
@@ -4,11 +4,13 @@
         <link rel="stylesheet" href="defaultstyle.css">
     </head>
     <body>
+        <h1 class="header">luca guerrera</h1>
         <ul class="navbar">
             <li> <a href="/">Home</a> </li>
             <li> <a href="coding.html">Coding</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
             <li> <a class="active" href="artdesign.html">Art and Design</a> </li>
+            <li> <a href="about.html">About</a> </li>
         </ul>
         <h1>this is art</h1>
     </body>
