--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <link rel="stylesheet" href="defaultstyle.css">
     </head>
     <body>
+        <h1 class="header">luca guerrera</h1>
         <ul class="navbar">
             <li> <a class="active" href="/">Home</a> </li>
             <li> <a href="coding.html">Coding</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
             <li> <a href="artdesign.html">Art and Design</a> </li>
+            <li> <a href="about.html">About</a> </li>
         </ul>
-        <h1>luca guerrera</h1>
         <p>Computer Science and Education Studies @ Wesleyan University.</p>
     </body>
 </html>
