--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
         <h1 class="header">luca guerrera</h1>
         <ul class="navbar">
             <li> <a href="/">Home</a> </li>
-            <li> <a href="coding.html">Coding</a> </li>
+            <li> <a href="gamedesign.html">Game Design</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
-            <li> <a href="artdesign.html">Art and Design</a> </li>
+            <li> <a href="graphicdesign.html">Graphic Design</a> </li>
             <li> <a class="active" href="about.html">About</a> </li>
         </ul>
         <h1>about me</h1>
