--- a/gamedesign.html
+++ b/gamedesign.html
@@ -7,11 +7,11 @@
         <h1 class="header">luca guerrera</h1>
         <ul class="navbar">
             <li> <a href="/">Home</a> </li>
-            <li> <a href="coding.html">Coding</a> </li>
+            <li> <a class="active" href="gamedesign.html">Game Design</a> </li>
             <li> <a href="edstudies.html">Education Studies</a> </li>
-            <li> <a class="active" href="artdesign.html">Art and Design</a> </li>
+            <li> <a href="graphicdesign.html">Graphic Design</a> </li>
             <li> <a href="about.html">About</a> </li>
         </ul>
-        <h1>this is art</h1>
+        <h1>games i've helped make</h1>
     </body>
 </html>
