filled in about + ed studies

--- a/about.html
+++ b/about.html
@@ -13,15 +13,33 @@
             <li> <a class="active" href="about.html">About</a> </li>
         </ul>
         <h1>about me</h1>
-        <h2>
-            see my cv 
-            <a href="https://docs.google.com/document/d/1yqeL6XBWqcFSBsn6as6rBDJjOzIX4FNQtbRkNBeIyDk/edit?usp=sharing"
-            target="_blank">here</a>.
-        </h2>
-        <br />
+        <p>hi! i'm luca guerrera. i use they/them pronouns and i study education. i graduated 
+            from Wesleyan University in May 2025 with a bachelors in education studies and 
+            computer science. in college, i discovered that i am incredibly passionate about 
+            seeking equity in education, particularly at the intersection of race and 
+            disability. i hope to eventually become a professor and teach education studies 
+            (which one might find ironic). 
+        </p>
+        <p>in my spare time, i enjoy printmaking, reading, knitting, and making art. please feel free to 
+            reach out to me.
+        </p>
+
+        <br>
+
         <h2>get in touch:</h2>
         <p>
             email - lguerrera@wesleyan.edu
+        </p>
+
+        <br>
+
+        <h2>
+            see my cv 
+            <a href="https://docs.google.com/document/d/e/2PACX-1vRVyEwBHdD0gygnRAvA8MUEhE9Os32mMBDEl_Nd3tjP1IS3R0FG3_D5_zJjPO5tpCj3OCViI2RhEHG-/pub?embedded=true"
+            target="_blank">here</a>:
+        </h2>
+        <p style="text-align: center;">
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vRVyEwBHdD0gygnRAvA8MUEhE9Os32mMBDEl_Nd3tjP1IS3R0FG3_D5_zJjPO5tpCj3OCViI2RhEHG-/pub?embedded=true"></iframe>
         </p>
     </body>
 </html>
