--- a/edstudies.html
+++ b/edstudies.html
@@ -12,9 +12,24 @@
             <li> <a href="graphicdesign.html">Graphic Design</a> </li>
             <li> <a href="about.html">About</a> </li>
         </ul>
-        <h1>this is ed studies</h1>
+        <h1>education studies</h1>
         <p>
             Areas of interest in research, core values, favorite literature...
+        </p>
+        <h2>my research interests</h2>
+        <ul>
+            <li>the intersection of race and disability</li>
+            <li>black studies and latine studies</li>
+            <li>discrit and disability studies</li>
+            <li>carcerality in schools</li>
+            <li>urban education</li>
+            <li>special education policy and implementation</li>
+            <li>power in IEP meetings</li>
+        </ul>
+        <p>my work is primarily guided by a strong belief in grassroots movements,
+            activism, and the power of local communities. i believe in empowering
+            marginalized groups and giving them resources to make decisions about 
+            their local communities.
         </p>
     </body>
 </html>
