added some content to gamedesign

--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
             from Wesleyan University in May 2025 with a bachelors in education studies and 
             computer science. in college, i discovered that i am incredibly passionate about 
             seeking equity in education, particularly at the intersection of race and 
-            disability. i hope to eventually become a professor and teach education studies 
-            (which one might find ironic). 
+            disability. i hope to eventually become a professor and teach education studies. 
         </p>
-        <p>in my spare time, i enjoy printmaking, reading, knitting, and making art. please feel free to 
+        <p>
+            in my spare time, i enjoy coding and making games, printmaking, reading, knitting, and making art. please feel free to 
             reach out to me.
         </p>
 
