--- a/gamedesign.html
+++ b/gamedesign.html
@@ -12,6 +12,29 @@
             <li> <a href="graphicdesign.html">Graphic Design</a> </li>
             <li> <a href="about.html">About</a> </li>
         </ul>
-        <h1>games i've helped make</h1>
+        <h1>physical games</h1>
+        <h2>Central Processing</h2>
+        <p>
+            Central Processing is a cooperative card-based puzzle game for two players about learning 
+            elements of binary logic — the building blocks of computer code. We wanted to make the game
+            as freely accessible as possible: it can be played with nothing more than the rules, a pencil 
+            and paper, and a standard deck of playing cards. 
+            Or, you can print and play our custom deck.
+        </p>
+        <p>
+            See the gameplay instructions <a href="https://camillazamboni.wescreates.wesleyan.edu/egl/fall-2022/central-processing/">here</a>, 
+            or the version with an online randomizer on my groupmate's website <a href="https://imyxh.net/central_processing/">here</a>. 
+        </p>
+        <p>
+            Created by Luca Guerrera, Ivy Huang, and Ford McDill. I collaborated with Ivy and Ford in designing 
+            the game and iterative playtesting of the rules. I also designed the custom deck from scratch.
+        </p>
+        
+
+        
+
+        <h1>game demos</h1>
+
+
     </body>
 </html>
